(saterfiel) #19 #25 #26 added password reset and updated signup api calls
